2002-03-01  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-register.c (register_changed_p): Don't use REGISTER_BYTES.
	There is no guarantee anymore that REGISTER_BYTES contains
	NUM_REGS+NUM_PSEUDO_REGS registers.
	(setup_architecture_data): Likewise.

2002-02-25  Ian Roxborough  <irox@redhat.com>

	* library/srcbar.itcl (SrcBar::create_buttons): Added
	"Search in source file" entry box and label to the top
	row toolbar.
	* library/srcwin.itb (SrcWin::_build_win): Removed
	"Search in source file" entry box.
	(SrcWin::_search): Renamed to "search", add string
	parameter and cleaned up.
	* library/srcwin.ith (SrcWin): Removed private
	method "_search" and added public method "search".

2002-02-17  Tom Tromey  <tromey@redhat.com>

	* library/tclIndex: Updated.
	* library/srcbar.itcl (SrcBar): Use new Session namespace.
	* library/main.tcl: Use new Session namespace.
	* library/interface.tcl (gdbtk_tcl_preloop): Use new Session
	namespace.
	(gdbtk_cleanup): Likewise.
	(_close_file): Likewise.
	* library/session.tcl: Use a namespace.  Renamed all functions.

2002-02-13  Martin M. Hunt  <hunt@redhat.com>

	* generic/gdbtk-hooks.c (gdbtk_print_frame_info): Don't 
	set GDB globals current_source_symtab and current_source_line.
	Let GDB do it. 

2002-02-13  Keith Seitz  <keiths@redhat.com>

	* library/managedwin.itb (_create): If given a transient window,
	make sure that the SrcWin that is to become its master exists;
	otherwise, use ".".

2002-02-12  Keith Seitz  <keiths@redhat.com>

	From Don Bowman <don@sandvine.com>:
	* library/targetselection.itb (init_target_db): Add target
	vxWorks.
        Update copyright.

2002-02-10  Daniel Jacobowitz  <drow@mvista.com>

	* generic/gdbtk-cmds.c (gdb_listfuncs): Don't call
	BLOCK_SHOULD_SORT.
	* library/browserwin.itb (BrowserWin::_fill_funcs_combo): Sort
	the output of gdb_listfuncs.

2002-02-07  Martin M. Hunt  <hunt@redhat.com>

	* generic/gdbtk.c, generic/gdbtk-bp.c, generic/gdbtk-cmds.c,