@@ -37,6 +37,10 @@
 #include <windows.h>
 #endif
 
+/* tcl header files includes varargs.h unless HAS_STDARG is defined,
+   but gdb uses stdarg.h, so make sure HAS_STDARG is defined.  */
+#define HAS_STDARG 1
+
 #include <itcl.h>
 #include <tix.h>
 #include "guitcl.h"
