@@ -1,3 +1,9 @@
+2002-03-25  Alexandre Oliva  <aoliva@redhat.com>
+
+	* generic/gdbtk.c (HAS_STDARG): Define.
+	* generic/gdbtk-cmds.c (HAS_STDARG): Likewise.
+	* generic/gdbtk-hooks.c (HAS_STDARG): Likewise.
+
 2002-03-01  Keith Seitz  <keiths@redhat.com>
 
 	* generic/gdbtk-register.c (register_changed_p): Don't use REGISTER_BYTES.
